# QuartzEngine

./: .gitignore  .replit  404.html  LICENSE  README.md  about.html  index.html  load_assets.js  main.css  main.js  main.sh  pyproject.toml  releases.html  replit.nix  requirements.txt  setup.py  topnav.css  under-construction.html
Docs/: INTRO.md
Docs/Engine/: CAMERA.md  CONTENTS.md  DYNAMICS.md  FRAME.md  GEOMETRY.md  PIXEL.md
Examples/: connect4.py  move_around_a_10x5_grid_game.py  physics_simulation.py
Quartz/: __init__.py  const.py  engine.py  errorHandler.py  error_handler.py  graphicEngine.py  graphicsEngine.py  graphics_engine.py  input.py  map.py  quartz.py  tools.py  world_builder.py
Quartz/Console/: Fidelity.py  __init__.py
Quartz/Engine/: Camera.py  Dynamics.py  Frame.py  Geometry.py  Pixel.py  __init__.py
assets/: footer.html  topnav.html
examples/: 2D_MarioGame.py  2D_Platformer.py  dungeons.py  main_menu.py  tictactoe.py
quartzengine/: __init__.py  animator.py  const.py  display.py  engine.py  errorhandler.py  map.py  menu.py  modules.py  tools.py
